--- a/example.html
+++ b/example.html
@@ -1,1 +1,10 @@
-hello world
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<title>hello world</title>
+</head>
+<body>
+	<h1>hello world</h1>
+</body>
+</html>
